localization/v2.6.x/site/it/adminGuide/limit_collection_counts.md
---
id: limit_collection_counts.md
title: Stabilire limiti al numero di raccolte
---
<h1 id="Limit-Collection-Counts" class="common-anchor-header">Limitare il numero di raccolte<button data-href="#Limit-Collection-Counts" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Un'istanza Milvus consente fino a 65.536 raccolte. Tuttavia, un numero eccessivo di raccolte può causare problemi di prestazioni. Pertanto, si consiglia di limitare il numero di raccolte create in un'istanza Milvus.</p>
<p>Questa guida fornisce istruzioni su come impostare i limiti al numero di raccolte in un'istanza Milvus.</p>
<p>La configurazione varia a seconda del modo in cui si installa l'istanza Milvus.</p>
<ul>
<li><p>Per le istanze Milvus installate utilizzando Helm Charts</p>
<p>Aggiungete la configurazione al file <code translate="no">values.yaml</code> nella sezione <code translate="no">config</code>. Per i dettagli, consultare <a href="/docs/it/configure-helm.md">Configurazione di Milvus con Helm Charts</a>.</p></li>
<li><p>Per le istanze Milvus installate usando Docker Compose</p>
<p>Aggiungere la configurazione al file <code translate="no">milvus.yaml</code> utilizzato per avviare l'istanza Milvus. Per i dettagli, fate riferimento a <a href="/docs/it/configure-docker.md">Configurare Milvus con Docker Compose</a>.</p></li>
<li><p>Per le istanze Milvus installate con Operator</p>
<p>Aggiungere la configurazione alla sezione <code translate="no">spec.components</code> della risorsa personalizzata <code translate="no">Milvus</code>. Per i dettagli, vedere <a href="/docs/it/configure_operator.md">Configurazione di Milvus con Operator</a>.</p></li>
</ul>
<h2 id="Configuration-options" class="common-anchor-header">Opzioni di configurazione<button data-href="#Configuration-options" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><pre><code translate="no" class="language-yaml"><span class="hljs-attr">rootCoord:</span>
    <span class="hljs-attr">maxGeneralCapacity:</span> <span class="hljs-number">65536</span>

<span class="hljs-attr">quotaAndLimits:</span>
    <span class="hljs-attr">limits:</span>
        <span class="hljs-attr">maxCollectionNum:</span> <span class="hljs-number">65536</span>
        <span class="hljs-attr">maxCollectionNumPerDB:</span> <span class="hljs-number">65536</span>
<button class="copy-code-btn"></button></code></pre>
<p>Per modificare il limite di raccolta, è necessario modificare tutti e tre i parametri insieme:</p>
<table>
<thead>
<tr><th>Parametro</th><th>Descrizione</th><th>Valore predefinito</th></tr>
</thead>
<tbody>
<tr><td><code translate="no">rootCoord.maxGeneralCapacity</code></td><td>Numero massimo di unità di raccolta (shard × partizioni) che l'istanza corrente può contenere.</td><td><code translate="no">65536</code></td></tr>
<tr><td><code translate="no">quotaAndLimits.limits.maxCollectionNum</code></td><td>Numero massimo di raccolte consentite in tutti i database dell'istanza corrente.</td><td><code translate="no">65536</code></td></tr>
<tr><td><code translate="no">quotaAndLimits.limits.maxCollectionNumPerDB</code></td><td>Numero massimo di raccolte consentite in un singolo database.</td><td><code translate="no">65536</code></td></tr>
</tbody>
</table>
<p>Ad esempio, per aumentare il limite a 200.000 raccolte:</p>
<pre><code translate="no" class="language-yaml"><span class="hljs-attr">rootCoord:</span>
    <span class="hljs-attr">maxGeneralCapacity:</span> <span class="hljs-number">200000</span>

<span class="hljs-attr">quotaAndLimits:</span>
    <span class="hljs-attr">limits:</span>
        <span class="hljs-attr">maxCollectionNum:</span> <span class="hljs-number">200000</span>
        <span class="hljs-attr">maxCollectionNumPerDB:</span> <span class="hljs-number">200000</span>
<button class="copy-code-btn"></button></code></pre>
<div class="alert note">
<p>L'impostazione del solo <code translate="no">maxGeneralCapacity</code> senza regolare anche <code translate="no">maxCollectionNum</code> e <code translate="no">maxCollectionNumPerDB</code> non avrà effetto. Tutti e tre i parametri devono essere impostati sullo stesso valore o su un valore superiore per aumentare il limite delle raccolte.</p>
</div>
<h2 id="Calculating-the-number-of-collections" class="common-anchor-header">Calcolo del numero di raccolte<button data-href="#Calculating-the-number-of-collections" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>In una raccolta è possibile impostare più shard e partizioni. Gli shard sono unità logiche utilizzate per distribuire le operazioni di scrittura dei dati tra più nodi di dati. Le partizioni sono unità logiche utilizzate per migliorare l'efficienza del recupero dei dati caricando solo un sottoinsieme dei dati della raccolta. Quando si calcola il numero di raccolte nell'istanza Milvus corrente, è necessario contare anche gli shard e le partizioni.</p>
<p>Ad esempio, supponiamo di aver già creato <strong>100</strong> raccolte, con <strong>2</strong> shard e <strong>4</strong> partizioni in <strong>60</strong> di esse e con <strong>1</strong> shard e <strong>12</strong> partizioni nelle altre <strong>40</strong> raccolte. Il numero totale di unità di raccolta (calcolato come <code translate="no">shards × partitions</code>) può essere determinato come segue:</p>
<pre><code translate="no">60 (collections) x 2 (shards) x 4 (partitions) + 40 (collections) x 1 (shard) x 12 (partitions) = 960
<button class="copy-code-btn"></button></code></pre>
<p>In questo esempio, il totale calcolato di 960 unità di raccolta rappresenta l'utilizzo attuale. Il parametro <code translate="no">maxGeneralCapacity</code> definisce il numero massimo di unità di raccolta che un'istanza può supportare, che per impostazione predefinita è <code translate="no">65536</code>. Ciò significa che l'istanza può ospitare fino a 65.536 unità di raccolta. Se il numero totale supera questo limite, il sistema visualizza il seguente messaggio di errore:</p>
<pre><code translate="no" class="language-shell">failed checking constraint: sum_collections(parition*shard) exceeding the max general capacity:
<button class="copy-code-btn"></button></code></pre>
<p>Per evitare questo errore, è possibile ridurre il numero di shard o partizioni nelle raccolte esistenti o in quelle nuove, eliminare alcune raccolte o aumentare il limite di raccolta modificando insieme <code translate="no">maxGeneralCapacity</code>, <code translate="no">maxCollectionNum</code> e <code translate="no">maxCollectionNumPerDB</code>.</p>
